--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th"> <!-- Changed lang to "th" for Thai -->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Furniture Planner</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" href="/image/favicon.ico?v=2" type="image/x-icon" />
-    <!-- <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" > -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
+    <!-- ไม่ได้ใช้ Bootstrap หรืออื่นๆ ในตัวอย่างนี้ จึงลบออกเพื่อความกระชับ -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- Three.js Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
 
-
-
+    <!-- !!! เพิ่มสคริปต์ GLTFLoader ที่นี่ !!! -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
 
 </head>
 
@@ -26,16 +23,21 @@
     <!-- พื้นที่สำหรับแสดงผล 3D -->
     <canvas id="c"></canvas>
 
-    <!-- ส่วนควบคุมและเมนู (จะเพิ่มทีหลัง) -->
+    <!-- !!! แก้ไขส่วน Sidebar ที่นี่ !!! -->
     <div class="sidebar">
         <h3>🛋️ คลังเฟอร์นิเจอร์</h3>
-        <p>(เร็วๆ นี้)</p>
+        <div class="furniture-list">
+            <!-- !!! แก้ไข data-model-url ในปุ่มนี้ !!! -->
+            <button class="furniture-item" data-model-url="GlamVelvetSofa.glb">
+                <span class="item-icon">🛋️</span>
+                <span class="item-name">โซฟา</span>
+            </button>
+        </div>
     </div>
-
-
-
-    <!-- แบบที่ถูกต้อง (Correct) -->
-<script src="script.js"></script>
+    <!-- สคริปต์หลักของเรา -->
+    <script src="script.js"></script>
 </body>
 
 </html>
+
+<!-- https://github.com/KhronosGroup/glTF-Sample-Models/blob/main/2.0/GlamVelvetSofa/glTF-Binary/GlamVelvetSofa.glb -->
