Update furniture model URLs to use relative paths for consistency

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <h3> คลังเฟอร์นิเจอร์</h3>
         <div class="furniture-list">
             <!-- !!! แก้ไข data-model-url ในปุ่มนี้ !!! -->
-            <button class="furniture-item" data-model-url="../Model/GlamVelvetSofa.glb">
+            <button class="furniture-item" data-model-url="Model/GlamVelvetSofa.glb">
                 <span class="item-icon">🛋️</span>
                 <span class="item-name">โซฟา</span>
             </button>
-             <button class="furniture-item" data-model-url="../Model/IridescenceLamp.glb">
+             <button class="furniture-item" data-model-url="Model/IridescenceLamp.glb">
                 <span class="item-icon">💡</span>
                 <span class="item-name">โคมไฟ</span>
             </button>
-            <button class="furniture-item" data-model-url="../Model/SheenChair.glb">
+            <button class="furniture-item" data-model-url="Model/SheenChair.glb">
                 <span class="item-icon">🪑</span>
                 <span class="item-name">เก้าอี้</span>
             </button>
